k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-db
  labels:
    app: note-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: note-db
  template:
    metadata:
      labels:
        app: note-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
        - name: init-sql
          configMap:
            name: note-db-init
