k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: note-db
  ports:
    - port: 3306
      targetPort: 3306
