k8s/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: note-web
spec:
  selector:
    app: note-web
  ports:
    - port: 80
      targetPort: 5000
